--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,22 @@
 name: Generate Snake
-
 on:
-  schedule: # run automatically every 12 hours
-    - cron: "0 */12 * * *"
-  workflow_dispatch: # allow manual runs
+  schedule: # execute every 12 hours
+    - cron: "*/12 * * * *"
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Generate Snake Animation
+    name: Jobs to update datas
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Generate Snake
-        uses: Platane/snk/svg-only@v3
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
           github_user_name: NadaRahali
-          outputs: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
