--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Generate Snake
 on:
   schedule: # execute every 12 hours
-    - cron: "*/12 * * * *"
+    - cron: "* */12 * * *"
   workflow_dispatch:
-
 jobs:
   build:
     name: Jobs to update datas
@@ -12,10 +11,9 @@ jobs:
       # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-        with:
+with:
           github_user_name: NadaRahali
           svg_out_path: dist/github-contribution-grid-snake.svg
-
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
